; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_skip_sub_layer_hrd_parameters.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_skip_sub_layer_hrd_parameters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i64)* @skip_sub_layer_hrd_parameters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_sub_layer_hrd_parameters(i32* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %27, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ule i32 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @get_ue_golomb_long(i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @get_ue_golomb_long(i32* %15)
  %17 = load i64, i64* %6, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %12
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @get_ue_golomb_long(i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @get_ue_golomb_long(i32* %22)
  br label %24

24:                                               ; preds = %19, %12
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @skip_bits1(i32* %25)
  br label %27

27:                                               ; preds = %24
  %28 = load i32, i32* %7, align 4
  %29 = add i32 %28, 1
  store i32 %29, i32* %7, align 4
  br label %8

30:                                               ; preds = %8
  ret void
}

declare dso_local i32 @get_ue_golomb_long(i32*) #1

declare dso_local i32 @skip_bits1(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
